# herrfors-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  scrape.py  write-consumption-to-influxdb.py  write-production-to-influxdb.py  write-to-influxdb.py
.github/: dependabot.yml
.github/workflows/: linting.yaml
herrfors_scraper/: __main__.py  api.py  const.py  exception.py  scrape.py
influxdb_export/: common.py  consumption.py  production.py
