[tool.poetry]
name = "herrfors-scraper"
version = "0.1.0"
description = ""
authors = ["Sebastian Lövdahl <slovdahl@hibox.fi>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "herrfors_scraper" },
    { include = "influxdb_export" },
]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "2.9.0.post0"
influxdb = "5.3.2"
requests = "2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
yamllint = "^1.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]

[tool.ruff]
line-length = 88  # defaults to 88 like black
target-version = "py38"

[tool.ruff.lint]
select = [
    "ALL"
]

ignore = [
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "PLR2004", # magic-value-comparison
    "T201",    # print found
]

unfixable = [
    "ARG001",  # Unused function argument
    "F841",    # Local variable name is assigned to but never used
]

[tool.ruff.lint.isort]
known-first-party = ["herrfors_scraper"]
