[project]
name = "herrfors-scraper"
version = "0.2.0"
description = ""
authors = [{name = "Sebastian Lövdahl", email = "slovdahl@hibox.fi"}]
readme = "README.md"
license = "MIT"
packages = [
    { include = "herrfors_scraper" },
    { include = "influxdb_export" },
]
requires-python = ">=3.12"
requires-poetry = ">=2.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python-dateutil = "2.9.0.post0"
influxdb = "5.3.2"
requests = "2.32.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
yamllint = "^1.37.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88  # defaults to 88 like black
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL"
]

ignore = [
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "PLR2004", # magic-value-comparison
    "T201",    # print found
]

unfixable = [
    "ARG001",  # Unused function argument
    "F841",    # Local variable name is assigned to but never used
]

[tool.ruff.lint.isort]
known-first-party = ["herrfors_scraper"]
